Change Log
==========


Release 0.5.5.12
	- Bug fix in rep_show_group.php
	
	- removed old, unneeded files and folders
	
	- changed session handling to be compatible with PHP 5.4
	  
	- renamed hex2bin function to myhex2bin to avoid conflicts 
	  with PHP 5.4
	  
	  
Release 0.5.5.11
	- Feature request ID: 3576275
	  Encoding LDAP name and givenname to handle German umlauts
	  
	- Feature request ID: 3576273
	  Sorting LDAP Users
	  
	- Feature request ID: 3576346
	  Writing root access rights
	  
	- Feature request ID: 3576692
	  Report "show group"
	  
	- Bug Fix in LDAP connect, wrong protocol version was used
	
	- Bug Fix in user and group report
	  output error message if no user or no group are selected
	  
	- added access by column to user report
	
	- Feature request ID: 3576279
	  Bind to LDAP/AD with given user credentials. This feature
	  is only needed for Active Directory at the moment.
	
	
	Thanks to Tobias for sending a lot of patches
	
	  
Release 0.5.5.10
	- Feature request ID: 3575716
	  checkSession.php with Anti-Cache Parameter
	  
	- Bug fix ID: 3575725
	  field order list_users.tpl wrong when using ldap
	  
	- Bug fix ID: 3575798
	  $schema is not set is fixed
	  searching by name and given name or vice versa is now possible
	  
	- md5 is now default encryption in installer
	
	- Feature request ID: 3576054
	  Option to write anonymous access option
	  
	- website charset is now a drop down in the installer
	
	- Bug Fix ID: 3576317
	  typo in install.php
	  
	  
Release 0.5.5.9
	- Bug fix ID: 3575421
	  search field issue
	  
	- added some default values for files and directories 
	  in the installer
	  
	- Fixed ID: 3563502
	  added selinux module (experimantal)
	  
	  
Release 0.5.5.8
	- Bug fix in the installer
	
	
Release 0.5.5.7
	- Feature request ID: 3574438
	  configurable default 'password expires'
	  
	- added some more information to 'Show user' report
	
	- added search fields in user list, group list, project list and 